@@ -5,7 +5,10 @@ CHANGES
 1.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Cache ONLY for the ``session`` setting. Others turned out as a bad idea.
+  It's pretty straightforward now, we're caching session data lookups because
+  those lookups are sooo slow.
+  Would be better done in z3c.language.session, but there's nothing persistent.
 
 
 1.0.3 (2010-08-05)
